Changes: - changed used port number from 80 to 5000 because Port 80 wasnt working. maybe because port 80 being a reserved port - changed the first message of the bot and the default answer to a better one.

--- a/templates/index.html
+++ b/templates/index.html
@@ -30,7 +30,7 @@
                      <image class="user" xlink:href="/person.svg" width="20" height="20" />
                 </svg>`
 
-                var text = robot_svg + " - Hallo, ich bin shitbot!"
+                var text = robot_svg + " - Hallo, mein Name ist Chatbotty. Wie kann ich Dir helfen?"
                 $("#chat").html(text);
 
                 $("#chat_button").on("click", function(){
@@ -42,7 +42,7 @@
 
                     $("#chat").html(text);
 
-                    text += "<br>" + robot_svg + " - Nö, du bist shitbot!";
+                    text += "<br>" + robot_svg + " - Test!";
                     $("#chat").html(text);
 
                 });
