--- a/templates/index.html
+++ b/templates/index.html
@@ -10,51 +10,20 @@
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script>
 
-        <link rel="icon" type="image/png" sizes="50x50" href="/background.webp">
+        <link rel="icon" type="image/png" sizes="50x50" href="/logo.webp">
         <link rel="stylesheet" href="/chatbot.css">
-        <script src="https://kit.fontawesome.com/8223c4836d.js" crossorigin="anonymous"></script>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/underscore@1.13.6/underscore-umd-min.js"></script>
 
         <title>Chatbot</title>
 
-        <script>
-            $(document).ready(function(){
-                var robot_svg = `
-                <svg width="20" height="20">
-                     <image class="robot" xlink:href="/robot.svg" width="20" height="20" />
-                </svg>
-                `
-                var user_svg = `
-                <svg width="20" height="20">
-                     <image class="user" xlink:href="/person.svg" width="20" height="20" />
-                </svg>`
-
-                var text = robot_svg + " - Hallo, mein Name ist Chatbotty. Wie kann ich Dir helfen?"
-                $("#chat").html(text);
-
-                $("#chat_button").on("click", function(){
-                    var chat_input = $("#chat_input");
-                    answer = chat_input.val();
-                    chat_input.val("");
-
-                    text += "<br>" + user_svg + " - " + answer;
-
-                    $("#chat").html(text);
-
-                    text += "<br>" + robot_svg + " - Test!";
-                    $("#chat").html(text);
-
-                });
-
-            });
-        </script>
+        <script src="/chatbot.js"></script>
     </head>
     <body>
         <nav class="navbar navbar-expand-lg navbar-dark nav_1">
             <div class="container-fluid">
                 <a class="navbar-brand" href="/">
-                    <img src="/background.webp" width="50" height="50" class="d-inline-block align-top" alt="Chatbot logo">
+                    <img src="/logo.webp" width="50" height="50" class="d-inline-block align-top" alt="Chatbot logo">
                     Chatbot
                 </a>
             </div>
@@ -69,12 +38,12 @@
                     <div class="col-md-5">
                         <div class="card mb-3 border border-2">
                           <div class="card-header">Chatbot</div>
-                          <div class="card-body bg-dark text-white" id="chat">
+                          <div class="card-body" id="chat">
                           </div>
-                          <div class="card-footer bg-dark text-white">
+                          <div class="card-footer">
                               <div class="input-group mb-3">
                                   <input type="text" class="form-control" placeholder="Message" aria-label="Recipient's username" aria-describedby="chat_button" id="chat_input">
-                                  <button class="btn btn-outline-secondary" type="button" id="chat_button">Enter</button>
+                                  <button class="btn btn-outline-primary" type="button" id="chat_button">Enter</button>
                               </div>
                           </div>
                         </div>
