--- a/templates/index.html
+++ b/templates/index.html
@@ -15,7 +15,7 @@
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/underscore@1.13.6/underscore-umd-min.js"></script>
 
-        <title>Chatbot</title>
+        <title>Chatbotty </title>
 
         <script src="/chatbot.js"></script>
     </head>
